# openapi/api/v1/openapi.yaml
@@ -1,84 +1,27 @@
 openapi: 3.0.1
 info:
   title: "Ecosyste.ms: summary"
-  description: "An open API service providing security vulnerability metadata for many open source software ecosystems."
+  description: "An open API service for producing an overview of a list of open source projects."
   contact:
     name: Ecosyste.ms
     email: support@ecosyste.ms
     url: https://ecosyste.ms 
   version: 1.0.0
   license:
-    name: CC-BY-SA-4.0
-    url: https://creativecommons.org/licenses/by-sa/4.0/
+    name: CC-BY-4.0
+    url: https://creativecommons.org/licenses/by/4.0/
 externalDocs:
   description: GitHub Project
   url: https://github.com/ecosyste-ms/summary
 servers:
 - url: https://summary.ecosyste.ms/api/v1
 paths:
-  /summary:
-    get: 
-      summary: "list summary"
-      operationId: "getsummary"
+  /projects:
+    get:
+      summary: get projects
+      operationId: getProjects
       tags:
-        - summary
-      parameters:
-        - name: ecosystem
-          in: query
-          description: "Ecosystem to filter by"
-          required: false
-          schema:
-            type: string
-        - name: package_name
-          in: query
-          description: "Package to filter by"
-          required: false
-          schema:
-            type: string
-        - name: severity
-          in: query
-          description: "Severity to filter by"
-          required: false
-          schema:
-            type: string
-        - name: page
-          in: query
-          description: pagination page number 
-          required: false
-          schema:
-            type: integer
-        - name: per_page
-          in: query
-          description: Number of records to return 
-          required: false
-          schema:
-            type: integer
-        - name: created_after
-          in: query
-          description: filter by created_at after given time
-          required: false
-          schema:
-            type: string
-            format: date-time
-        - name: updated_after
-          in: query
-          description: filter by updated_at after given time
-          required: false
-          schema:
-            type: string
-            format: date-time
-        - name: sort
-          in: query
-          description: field to order results by
-          required: false
-          schema:
-            type: string
-        - name: order
-          in: query
-          description: direction to order results by
-          required: false
-          schema:
-            type: string
+        - projects
       responses:
         200:
           description: OK
@@ -87,91 +30,138 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Advisory'
-  /summary/packages:
+                  $ref: '#/components/schemas/Project'
+  /projects/{id}:
     get:
-      summary: "list packages that have summary"
-      operationId: "getsummaryPackages"
+      summary: get a project by id
+      operationId: getProject
       tags:
-        - summary
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Package'
-  /summary/{advisoryUUID}:
-    get:
-      summary: get a summary by uuid
-      operationId: getAdvisory
-      tags:
-        - summary
+        - projects
       parameters:
         - in: path
-          name: advisoryUUID
+          name: id
           schema:
-            type: string
+            type: integer
           required: true
-          description: uuid of the advisory
+          description: id of the project
       responses:
         200:
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Advisory'
+                $ref: '#/components/schemas/Project'
+  /collections:
+    get:
+      summary: get collections
+      operationId: getCollections
+      tags:
+        - collections
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Collection'
+  /collections/{id}:
+    get:
+      summary: get a collection by id
+      operationId: getCollection
+      tags:
+        - collections
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: id of the collection
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Collection'
+  /collections/{id}/projects:
+    get:
+      summary: get projects in a collection
+      operationId: getCollectionProjects
+      tags:
+        - collections
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: id of the collection
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Project'
 components:
   schemas:
-    Advisory:
+    Project:
       type: object
       properties:
-        uuid:
-          type: string
+        id:
+          type: integer
         url:
           type: string
-        title:
+        last_synced_at:
           type: string
-        description:
-          type: string
-        origin:
-          type: string
-        severity:
-          type: string
-        published_at:
-          type: string
-        withdrawn_at:
-          type: string
-        classification:
-          type: string
-        cvss_score:
-          type: number
-        cvss_vector:
-          type: string
-        references:
-          type: array
-          items:
-            type: string
-        source_kind:
-          type: string
-        identifiers:
-          type: array
-          items:
-            type: string
+          format: date-time
+        repository:
+          type: object
         packages:
           type: array
           items:
             type: object
+        commits:
+          type: object
+        events:
+          type: object
+        keywords:
+          type: array
+          items:
+            type: string
+        dependencies:
+          type: object
+        score:
+          type: number
         created_at:
           type: string
+          format: date-time
         updated_at:
           type: string
-    Package:
+          format: date-time
+    Collection:
       type: object
       properties:
-        ecosystem:
+        id:
+          type: integer
+        name:
           type: string
-        package_name:
+        url:
+          type: string
+        description:
+          type: string
+        created_at:
+          type: string
+          format: date-time
+        updated_at:
+          type: string
+          format: date-time
+        projects_url:
+          type: string
+        html_url:
           type: string
